# Audiobook_kokoro

./: README.md  pyproject.toml
examples/: sample.txt
kokoro_audiobook_maker/: __init__.py  app.py  cli.py  converter.py  tts.py
kokoro_audiobook_maker/ingest/: __init__.py  epub_loader.py  pdf_loader.py
kokoro_audiobook_maker/text/: normalize.py
kokoro_audiobook_maker/ui/: main_window.py  main_window.ui  resources.py
tests/: test_converter_cache.py  test_tts_pipeline_resolution.py
